# spotify-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
spotify_mcp/: __init__.py  auth.py  favorites.py  server.py  spotify_client.py
