[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotify-mcp"
version = "0.1.0"
description = "MCP server for Spotify playback control"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
spotify-mcp = "spotify_mcp.server:main"
